# dependency-algebra

./: .gitignore  ARCHITECTURE_CLOSURE_REPORT.md  BOUNDARY.md  COMPLEMENT_PROJECTION_CONTRACT.md  DEPENDENCY_PREDICATE_CONTRACT.md  DETERMINISM.md  FIXTURES.md  REACHABILITY_CONTRACT.md  README.md  SPEC.md  pyproject.toml  requirements-dev.txt
conformance/: __main__.py  adapters.json  adapters.py  compare.py  evidence.py  fixtures.py  foundation_adapter.py  jsonutil.py  runner.py  status.py
dependency_algebra/: __init__.py  analysis.py  analysis_registry.py  classification.py  cli.py  compiler.py  diagnostics.py  engine.py  evidence.py  frontend.py  ir.py  predicate.py  projection.py  reachability.py  serialization.py  version.py
docs/: dependency-pass-compatibility-report.md  highest-leverage-plan-audit.md  issue-78-artifact-compatibility.md  issue-83-cross-repository-conformance.md  scope-and-handoffs-v1.md  smallest-dependency-wedge.md
registry/: analysis_integration_matrix.json  traceability.json
schemas/: artifact.schema.json  classification.schema.json  conformance-evidence.schema.json  conformance-report.schema.json  dependency.schema.json  projection.schema.json  reachability.schema.json  representation-invariance-groups.schema.json  structural-evidence.schema.json  topology.schema.json
scripts/: check_traceability.py
tests/: analysis_integration_matrix_tests.py  analysis_pass_tests.py  analysis_registry_tests.py  architecture_tests.py  boundary_tests.py  cli_tests.py  conformance_harness_tests.py  cross_repository_conformance_tests.py  schema_tests.py  (+7 more)
(+70 files in other folders)
